--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "date-fns": "^2.15.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-native": "^0.63.2",
+    "react-native-switch": "^2.0.0",
+    "react-native-web": "^0.13.7",
+    "react-number-format": "^4.4.1",
     "react-scripts": "3.4.3",
+    "styled-components": "^5.1.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,5 +43,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@storybook/addon-actions": "^6.0.7",
+    "@storybook/addon-essentials": "^6.0.7",
+    "@storybook/addon-links": "^6.0.7",
+    "@storybook/node-logger": "^6.0.7",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.7",
+    "@types/react-native": "^0.63.8",
+    "@types/styled-components": "^5.1.2",
+    "babel-loader": "^8.1.0",
+    "react-is": "^16.13.1"
   }
 }
