--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "^0.63.2",
+    "react-native-chart-kit": "^6.5.0",
+    "react-native-svg": "^12.1.0",
     "react-native-switch": "^2.0.0",
     "react-native-web": "^0.13.7",
     "react-number-format": "^4.4.1",
