--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "date-fns": "^2.15.0",
+    "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "^0.63.2",
@@ -48,15 +49,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
-    "@storybook/addon-actions": "^6.0.10",
-    "@storybook/addon-essentials": "^6.0.10",
-    "@storybook/addon-links": "^6.0.10",
-    "@storybook/node-logger": "^6.0.10",
+    "@storybook/addon-actions": "^6.0.16",
+    "@storybook/addon-essentials": "^6.0.16",
+    "@storybook/addon-links": "^6.0.16",
+    "@storybook/node-logger": "^6.0.16",
     "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^6.0.10",
+    "@storybook/react": "^6.0.16",
     "@types/react-native": "^0.63.8",
     "@types/styled-components": "^5.1.2",
     "babel-loader": "^8.1.0",
+    "prettier": "^2.0.5",
     "react-is": "^16.13.1"
   }
 }
